app/assets/stylesheets/modules/view_metadata.scss
// .view-in-modal is a helper class used to show content in the modal view only
// useful for modal close buttons and other stuff

.view-metadata {
  .view-in-modal {
    display: none;
  }

  .modal-body {
    dl {
      margin-bottom: 2em;
    }

    dt {
      color: $gray-41-percent;
      font-size: 0.9em;
      font-weight: normal;
      padding-right: 1em;
      padding-top: 0.15em;
      text-transform: uppercase !important;
      width: 20em;
    }

    dd {
      margin-bottom: 0.5em;
      margin-left: 2em;
      max-width: 45em;
      overflow: hidden;
    }
  }
}

#blacklight-modal {
  .view-metadata {
    .view-in-modal {
      display: inline-block;
    }
  }
  .modal-body {
    max-height: calc(100vh - #{$modal-header-footer-height-guess});
    overflow-y: auto;
  }
}

